# Jarvis

./: .gitignore  ENGINE_AUDIT_2026-06-04.md  HACKATHON_READINESS.md  README.md  TECHNICAL.md  app.py  apply_engine.py  apply_handler.py  apply_llm.py  apply_orchestrator.py  apply_vision.py  article_link  ats_checker.py  auto_agent.py  bot.py  debug_agent.executed.ipynb  debug_agent.ipynb  debug_linkedin.py  debug_workday copy.ipynb  debug_workday.ipynb  e2e_batch.sh  e2e_test_run.py  eda1.ipynb  external_apply.py  job_fetcher.py  job_wiki.py  linkedin_easy_apply.py  linkedin_url_extractor.py  login_linkedin.py  parser.py  profile_manager.py  prompts.py  pyproject.toml  resume_pdf.py  scraper.py  screencast.py  test_detect.py  test_easy_apply.py  workday_recorder.py
apply_skills/: base.py  review_skill.py  router.py
backup_v1/: REVERT.md  auto_agent.py  external_apply.py  workday.py
backup_v1/apply_skills/: __init__.py  account_skill.py  base.py  contact_skill.py  resume_skill.py  screening_skill.py
deploy/: Caddyfile  README.md  resume-apply.service  setup.sh
fonts/: DejaVuSans-Bold.pkl  DejaVuSans-BoldOblique.pkl  DejaVuSans-Oblique.pkl  DejaVuSans.pkl
samples/: demo_resume.txt
templates/: index.html
