[project]
name = "resume-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # ── Web app (app.py) ──
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",   # FastAPI UploadFile / File(...)
    # ── Agent + browser ──
    "playwright>=1.58.0",
    "selenium>=4.41.0",
    "webdriver-manager>=4.0.2",
    # ── LLM ──
    "google-genai>=1.67.0",
    "openai>=2.38.0",
    # ── Résumé parse / build / scrape ──
    "beautifulsoup4>=4.14.3",
    "pdfplumber>=0.11.9",
    "pymupdf>=1.27.2.2",
    "fpdf>=1.7.2",
    "pandas>=3.0.1",
    # ── Telegram bot (bot.py) ──
    "python-telegram-bot>=21.0",
    # ── Config ──
    "python-dotenv>=1.2.2",
]
